--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon ./src/main.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "cors": "^2.8.5",
